--- a/dippa.tex
+++ b/dippa.tex
@@ -1,50 +1,42 @@
-%
-% This is a Dippa editor document template. The template suits best for academic papers
-% written in Finnish.
-%
-
-% Add a document type 'article' that suits for academic papers
 \documentclass[a4paper]{article}
 
-% Encoding that fits to Finnish language
+% Encoodaus, joka sopii suomenkielellä (esim. ä ja ö)
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-% Hyphenation for Finnish
+% Suomenkielinen tavutus
 \usepackage[finnish]{babel}
 
-% References.
-% NOTICE: References are currently not supported by Dippa Editor
+% Viitteet
 \usepackage{natbib}
 
+\usepackage{alltt}
+
+% Otsikkojen päätteetön fontti
+% \usepackage{sectsty}
+% \allsectionsfont{\sffamily\large}
+
+% Viitteiden merkit
 \bibpunct{(}{)}{;}{a}{,}{,}
 
-% Begin the document
+\usepackage{titlesec}
+\titleformat{\subsection}{\normalsize\bfseries}{}{0em}{}{}
+\titlespacing{\subsection}{0pt}{*1.5}{*1.0}
+
 \begin{document}
 
-% Document title
-\title{\huge Title \\ \large Subtitle}
-\date{1.1.2012}
-\author{Author name \\ author@email.fi}
+\title{\small Yrityksen rahoitus \\ \huge Tenttivastaukset}
+\date{25.2.2012}
+\author{Mikko Koski \\ mikko.koski@aalto.fi \\ 66467F}
 \maketitle
 
-\large
+\normalsize
+\setlength{\parindent}{0cm}
 
-% First section
-\section{Tämä on ensimmäinen iso otsikko, esim. Johdanto}
+% \section{Tentti 2009-06}
 
-Tässä on johdantokappale
+\subsection{Diskonttokorko (engl. discount rate)}
 
-\section{Seuraava iso otsikko}
+\subsection{Beta (termi ja laskeminen)}
 
-Tässä on sisältöä seuraavan ison otsikon alla
-
-\subsection{Alaotsikko}
-
-Tässä on alaotsikko ja viittaus esimerkkidokumenttiin \citep{koski2012}
-
-\bibliographystyle{plainnat}
-\bibliography{ref}
-
-% End of the document
 \end{document}
