--- a/dippa.tex
+++ b/dippa.tex
@@ -33,10 +33,16 @@
 \normalsize
 \setlength{\parindent}{0cm}
 
-% \section{Tentti 2009-06}
+\section{Tentti 2011 - 05}
 
-\subsection{Diskonttokorko (engl. discount rate)}
+\subsection{Sensory symbols}
 
-\subsection{Beta (termi ja laskeminen)}
+\subsection{Instructional bias}
+
+\subsection{CIE system of color standards}
+
+\subsection{Chromaticity diagram}
+
+
 
 \end{document}
