--- a/dippa.tex
+++ b/dippa.tex
@@ -43,6 +43,20 @@
 
 \subsection{Chromaticity diagram}
 
+\subsection{Pre-attentive features}
 
+\subsection{Conjunction search of two pre-attentive attributes}
+
+\subsection{PCA}
+
+\subsection{Principal component for PCA}
+
+\subsection{Curvilinear Component Analysis, CCA}
+
+\subsection{Cost function for CCA}
+
+\subsection{Euclidean distance (between points)}
+
+\subsection{PCA}
 
 \end{document}
