--- a/dippa.tex
+++ b/dippa.tex
@@ -57,6 +57,35 @@
 
 \subsection{Euclidean distance (between points)}
 
-\subsection{PCA}
+\subsection{Unity (CCA)}
+
+\subsection{Depth Cue theory}
+Explain
+
+List and explain depth cues
+
+\subsection{Dimensionality reduction}
+
+\subsection{Precision (in dimensionality reduction)}
+
+\subsection{Chart Junk}
+
+\subsection{Gibson's Affordance Theory}
+
+\subsection{Self-Organizing Maps (for dimensionality reduction)}
+
+\subsection{Saccadic Movements}
+
+\subsection{Pre-processing steps}
+
+\subsection{Post-processing steps}
+
+\subsection{Quality criteria}
+
+\subsection{Visual attention theory}
+
+\subsection{Ways that allow information to pop-up}
+
+\subsection{Active from the low-level point of view}
 
 \end{document}
