--- a/dippa.tex
+++ b/dippa.tex
@@ -49,17 +49,21 @@
 
 \subsection{PCA}
 
-\subsection{Principal component for PCA}
+\subsection{Principal component for PCA ++}
 
-\subsection{Curvilinear Component Analysis, CCA}
+\subsection{Curvilinear Component Analysis, CCA +}
 
-\subsection{Cost function for CCA}
+True or false? CCA does not preserve small distances
+
+\subsection{Cost function for CCA +}
+
+Formula?
 
 \subsection{Euclidean distance (between points)}
 
 \subsection{Unity (CCA)}
 
-\subsection{Depth Cue theory}
+\subsection{Depth Cue theory +}
 Explain
 
 List and explain depth cues
@@ -82,10 +86,50 @@ List and explain depth cues
 
 \subsection{Quality criteria}
 
-\subsection{Visual attention theory}
+\subsection{Visual attention theory +}
 
-\subsection{Ways that allow information to pop-up}
+Ways that allow information to pop-up
 
 \subsection{Active from the low-level point of view}
+
+\section{Tentti 2010 - 03}
+
+\subsection{Bad/good recall}
+
+\subsection{Bad/good precision}
+
+\subsection{MDS Multidimensional Scaling}
+
+True or false? Multidimensional scaling preserves small distances
+
+True of false? For MDS, the stress is always increasing with the projection dimension
+
+True of false? MDS requires the coordinates of the original data to project (distances are not enough)
+
+\subsection{Laplacian Eigenmap LE}
+
+ToF? Projecting to one dimension using LE is enough to preserce the proximity coded in L
+
+ToF? Projecting to two dimension using LE is enough to preserce the proximity coded in L
+
+ToF? Projecting to three dimension using LE is enough to preserce the proximity coded in L
+
+ToF? Laplacian Eigenmap does not work in this case
+
+\subsection{Lie-factor}
+
+\subsection{Data-ink}
+
+\subsection{Gestalt laws}
+
+\subsection{Geons}
+
+\subsection{Pre-attentive processing}
+
+\subsection{History and theory of data graphics according to Tufte}
+
+\subsection{Two theories on object recognition}
+
+Describe and compare
 
 \end{document}
