--- a/dippa.tex
+++ b/dippa.tex
@@ -43,13 +43,19 @@
 
 \subsection{Chromaticity diagram}
 
-\subsection{Pre-attentive features}
+\subsection{Pre-attentive features +}
+
+Discuss pre-attentive features in design and use of glyphs
 
 \subsection{Conjunction search of two pre-attentive attributes}
 
-\subsection{PCA}
+\subsection{PCA +++}
 
-\subsection{Principal component for PCA ++}
+What is the principal component?
+
+Describe principal component analysis (PCA) in a suffient detail to understand the working ideas and principles
+
+Descrube the properties of the visualization produced by PCA, and demonstrate the difference in resulting visualizations using a small toy example
 
 \subsection{Curvilinear Component Analysis, CCA +}
 
@@ -68,7 +74,11 @@ Explain
 
 List and explain depth cues
 
-\subsection{Dimensionality reduction}
+\subsection{Dimensionality reduction +}
+
+a) Describe, define and discuss the measures that can be used to evaluate the "goodnes" of the projection.
+
+
 
 \subsection{Precision (in dimensionality reduction)}
 
@@ -98,7 +108,11 @@ Ways that allow information to pop-up
 
 \subsection{Bad/good precision}
 
-\subsection{MDS Multidimensional Scaling}
+\subsection{MDS Multidimensional Scaling +}
+
+Describe multidimenstional scaling (MDS) in a suffient detail to understand the working ideas and principles
+
+Descrube the properties of the visualization produced by MDS, and demonstrate the difference in resulting visualizations using a small toy example
 
 True or false? Multidimensional scaling preserves small distances
 
@@ -120,16 +134,46 @@ ToF? Laplacian Eigenmap does not work in this case
 
 \subsection{Data-ink}
 
-\subsection{Gestalt laws}
+\subsection{Gestalt laws ++}
+
+What are gestalt laws and how can they be useful?
+
+List and briefly describe them.
 
 \subsection{Geons}
 
 \subsection{Pre-attentive processing}
 
-\subsection{History and theory of data graphics according to Tufte}
+\subsection{History and theory of data graphics according to Tufte +}
 
 \subsection{Two theories on object recognition}
 
 Describe and compare
+
+\section{Tentti 2009 - 05}
+
+\subsection{Luminance and brightness}
+
+\subsection{CIE XYZ, CIELab and CIELuv +}
+
+\subsection{Image based object recognition}
+
+\subsection{Structure based object recognition}
+
+\section{Tentti 2009 - 03}
+
+\subsection{Gamut}
+
+\subsection{Superacuity}
+
+\subsection{Focus and context problem}
+
+\subsection{Parallel coordinates}
+
+\subsection{Color scales}
+
+Important issues in designing color scales. Discuss pros and cons of the rainbow color scale as an example
+
+
 
 \end{document}
