--- a/dippa.tex
+++ b/dippa.tex
@@ -69,16 +69,16 @@ Formula?
 
 \subsection{Unity (CCA)}
 
-\subsection{Depth Cue theory +}
+\subsection{Depth Cue theory ++}
 Explain
 
 List and explain depth cues
 
-\subsection{Dimensionality reduction +}
+\subsection{Dimensionality reduction ++}
 
 a) Describe, define and discuss the measures that can be used to evaluate the "goodnes" of the projection.
 
-
+What to take into account when choosing a method to use
 
 \subsection{Precision (in dimensionality reduction)}
 
@@ -144,7 +144,9 @@ List and briefly describe them.
 
 \subsection{Pre-attentive processing}
 
-\subsection{History and theory of data graphics according to Tufte +}
+\subsection{History and theory of data graphics according to Tufte ++}
+
+History of data graphics and lessons learned (before the time of the computers)
 
 \subsection{Two theories on object recognition}
 
@@ -160,13 +162,29 @@ Describe and compare
 
 \subsection{Structure based object recognition}
 
+\subsection{Semiotics of graphics}
+
+\subsection{Glyph design}
+
+Design a glyph, taking the properties of human perception into account
+
+Design goals and choices from the viewpoint of human perception
+
+Design goals and choices from the viewpoint of data graphics
+
+Design goals and choices from the viewpoint of resulting visualization
+
+
+
 \section{Tentti 2009 - 03}
 
 \subsection{Gamut}
 
 \subsection{Superacuity}
 
-\subsection{Focus and context problem}
+\subsection{Focus and context problem +}
+
+Methods to solve it
 
 \subsection{Parallel coordinates}
 
