--- a/dippa.tex
+++ b/dippa.tex
@@ -49,7 +49,7 @@ Discuss pre-attentive features in design and use of glyphs
 
 \subsection{Conjunction search of two pre-attentive attributes}
 
-\subsection{PCA +++}
+\subsection{PCA ++++}
 
 What is the principal component?
 
@@ -69,12 +69,12 @@ Formula?
 
 \subsection{Unity (CCA)}
 
-\subsection{Depth Cue theory ++}
+\subsection{Depth Cue theory +++}
 Explain
 
 List and explain depth cues
 
-\subsection{Dimensionality reduction ++}
+\subsection{Dimensionality reduction +++}
 
 a) Describe, define and discuss the measures that can be used to evaluate the "goodnes" of the projection.
 
@@ -108,7 +108,7 @@ Ways that allow information to pop-up
 
 \subsection{Bad/good precision}
 
-\subsection{MDS Multidimensional Scaling +}
+\subsection{MDS Multidimensional Scaling ++}
 
 Describe multidimenstional scaling (MDS) in a suffient detail to understand the working ideas and principles
 
@@ -134,7 +134,7 @@ ToF? Laplacian Eigenmap does not work in this case
 
 \subsection{Data-ink}
 
-\subsection{Gestalt laws ++}
+\subsection{Gestalt laws +++}
 
 What are gestalt laws and how can they be useful?
 
@@ -148,23 +148,23 @@ List and briefly describe them.
 
 History of data graphics and lessons learned (before the time of the computers)
 
-\subsection{Two theories on object recognition}
-
-Describe and compare
-
 \section{Tentti 2009 - 05}
 
-\subsection{Luminance and brightness}
+\subsection{Luminance and brightness +}
 
 \subsection{CIE XYZ, CIELab and CIELuv +}
 
-\subsection{Image based object recognition}
+\subsection{Image based object recognition ++}
 
-\subsection{Structure based object recognition}
+Theory and implications in information visualization
+
+\subsection{Structure based object recognition ++}
+
+Theory and implications in information visualization
 
 \subsection{Semiotics of graphics}
 
-\subsection{Glyph design}
+\subsection{Glyph design +}
 
 Design a glyph, taking the properties of human perception into account
 
@@ -178,7 +178,7 @@ Design goals and choices from the viewpoint of resulting visualization
 
 \section{Tentti 2009 - 03}
 
-\subsection{Gamut}
+\subsection{Gamut +}
 
 \subsection{Superacuity}
 
@@ -192,6 +192,10 @@ Methods to solve it
 
 Important issues in designing color scales. Discuss pros and cons of the rainbow color scale as an example
 
+\section{Tentti 2008 - 05}
 
+\subsection{Moire effects}
+
+\subsection{Effective view navigation}
 
 \end{document}
