--- a/dippa.tex
+++ b/dippa.tex
@@ -144,7 +144,7 @@ List and briefly describe them.
 
 \subsection{Pre-attentive processing}
 
-\subsection{History and theory of data graphics according to Tufte ++}
+\subsection{History and theory of data graphics according to Tufte +++}
 
 History of data graphics and lessons learned (before the time of the computers)
 
