--- a/dippa.tex
+++ b/dippa.tex
@@ -43,7 +43,7 @@
 
 \subsection{Chromaticity diagram}
 
-\subsection{Pre-attentive features +}
+\subsection{Pre-attentive features ++}
 
 Discuss pre-attentive features in design and use of glyphs
 
@@ -69,12 +69,12 @@ Formula?
 
 \subsection{Unity (CCA)}
 
-\subsection{Depth Cue theory +++}
+\subsection{Depth Cue theory +++++}
 Explain
 
 List and explain depth cues
 
-\subsection{Dimensionality reduction +++}
+\subsection{Dimensionality reduction +++++}
 
 a) Describe, define and discuss the measures that can be used to evaluate the "goodnes" of the projection.
 
@@ -84,7 +84,7 @@ What to take into account when choosing a method to use
 
 \subsection{Chart Junk}
 
-\subsection{Gibson's Affordance Theory}
+\subsection{Gibson's Affordance Theory ++}
 
 \subsection{Self-Organizing Maps (for dimensionality reduction)}
 
@@ -96,7 +96,7 @@ What to take into account when choosing a method to use
 
 \subsection{Quality criteria}
 
-\subsection{Visual attention theory +}
+\subsection{Visual attention theory ++}
 
 Ways that allow information to pop-up
 
@@ -104,11 +104,11 @@ Ways that allow information to pop-up
 
 \section{Tentti 2010 - 03}
 
-\subsection{Bad/good recall}
+\subsection{Bad/good recall +}
 
-\subsection{Bad/good precision}
+\subsection{Bad/good precision +}
 
-\subsection{MDS Multidimensional Scaling ++}
+\subsection{MDS Multidimensional Scaling ++++}
 
 Describe multidimenstional scaling (MDS) in a suffient detail to understand the working ideas and principles
 
@@ -134,17 +134,17 @@ ToF? Laplacian Eigenmap does not work in this case
 
 \subsection{Data-ink}
 
-\subsection{Gestalt laws +++}
+\subsection{Gestalt laws +++++}
 
 What are gestalt laws and how can they be useful?
 
 List and briefly describe them.
 
-\subsection{Geons}
+\subsection{Geons +}
 
 \subsection{Pre-attentive processing}
 
-\subsection{History and theory of data graphics according to Tufte +++}
+\subsection{History and theory of data graphics according to Tufte ++++++}
 
 History of data graphics and lessons learned (before the time of the computers)
 
@@ -152,7 +152,7 @@ History of data graphics and lessons learned (before the time of the computers)
 
 \subsection{Luminance and brightness +}
 
-\subsection{CIE XYZ, CIELab and CIELuv +}
+\subsection{CIE XYZ, CIELab and CIELuv +++}
 
 \subsection{Image based object recognition ++}
 
@@ -162,9 +162,9 @@ Theory and implications in information visualization
 
 Theory and implications in information visualization
 
-\subsection{Semiotics of graphics}
+\subsection{Semiotics of graphics ++}
 
-\subsection{Glyph design +}
+\subsection{Glyph design +++}
 
 Design a glyph, taking the properties of human perception into account
 
@@ -180,9 +180,9 @@ Design goals and choices from the viewpoint of resulting visualization
 
 \subsection{Gamut +}
 
-\subsection{Superacuity}
+\subsection{Superacuity +}
 
-\subsection{Focus and context problem +}
+\subsection{Focus and context problem ++}
 
 Methods to solve it
 
@@ -197,5 +197,27 @@ Important issues in designing color scales. Discuss pros and cons of the rainbow
 \subsection{Moire effects}
 
 \subsection{Effective view navigation}
+
+\section{Tentti 2008 - 03}
+
+\subsection{Chernoff face}
+
+\subsection{Cost-knowledge characteristic function +}
+
+\subsection{ISOMAP, isometric mapping od data manifolds}
+
+\subsection{How the human eye resembles and differs from a camera}
+
+\subsection{Perception of visual patterns and objects}
+
+\section{Tentti 2007 - 05}
+
+\subsection{Crispening}
+
+\subsection{How to lay out a node-link diagram: principles and algorithms}
+
+\subsection{Aesthetic principles}
+
+In graph drawing, give some examples
 
 \end{document}
