--- a/dippa.tex
+++ b/dippa.tex
@@ -37,6 +37,10 @@
 
 \subsection{Sensory symbols}
 
+\textbf{Sensory symbols} are symbols or aspects of visualizations that can be understood without learning. A meaning of the sensory symbols tends to be stable across individuals, cultures and time. Example: A cave drawing of a hunt.
+
+As opposite a \textbf{arbitrary symbols} must be learned, for example written word "dog".
+
 \subsection{Instructional bias}
 
 \subsection{CIE system of color standards}
@@ -44,6 +48,8 @@
 \subsection{Chromaticity diagram}
 
 \subsection{Pre-attentive features ++}
+
+
 
 Discuss pre-attentive features in design and use of glyphs
 
