--- a/dippa.tex
+++ b/dippa.tex
@@ -39,6 +39,8 @@
 
 \textbf{Sensory symbols} are symbols or aspects of visualizations that can be understood without learning. A meaning of the sensory symbols tends to be stable across individuals, cultures and time. Example: A cave drawing of a hunt.
 
+Processing of sensory symbols is fast and hard-wired. They are resist instructional bias.
+
 As opposite a \textbf{arbitrary symbols} must be learned, for example written word "dog".
 
 \subsection{Instructional bias}
@@ -91,6 +93,8 @@ What to take into account when choosing a method to use
 \subsection{Chart Junk}
 
 \subsection{Gibson's Affordance Theory ++}
+
+
 
 \subsection{Self-Organizing Maps (for dimensionality reduction)}
 
