--- a/dippa.tex
+++ b/dippa.tex
@@ -45,6 +45,12 @@ As opposite a \textbf{arbitrary symbols} must be learned, for example written wo
 
 \subsection{Instructional bias}
 
+Because of instructional bias, we perceive a different line length because of the environment where the line is.
+
+\subsection{Arbitrary symbols}
+
+Hard to learn, easy to extend. Culture specific
+
 \subsection{CIE system of color standards}
 
 \subsection{Chromaticity diagram}
@@ -94,7 +100,17 @@ What to take into account when choosing a method to use
 
 \subsection{Gibson's Affordance Theory ++}
 
+Affordance (ilmeisyys): Perceivalbe possibilities for action. Gibson said the "we perceive in order to operate". We perceive possibilities for action. 
 
+Theory is attractive for visualization, because the goal of visualization is decision making. 
+
+According to Gibson, affordances are physical properties of the environment that we directly percive.
+
+1) Visualization is very abstract and indirect
+2) No clear physical affordance: GUI button is very arbitrary
+3) Rejection of visual mechanism
+
+Influental theory?
 
 \subsection{Self-Organizing Maps (for dimensionality reduction)}
 
