--- a/dippa.tex
+++ b/dippa.tex
@@ -184,6 +184,28 @@ History of data graphics and lessons learned (before the time of the computers)
 
 Theory and implications in information visualization
 
+People can recognice object from images remarkable well. If we show a pictures very rapidly (10 pic per sec), people are able to tell if there were a dog in one of the picture (Rapid serial visual presentation, RSVP).
+
+Related phenomen: attentional blink, brains are processing still the first dog
+
+Recognition ++ vs. recall --.
+
+Objects are best recognized if they are in the same direction as they were initially seen. Also, opposite (silhouette) is well recognized
+
+Priming effect: recognition is easier if prior exposure (altistuminen) to relevant information is given. For example, recognition of a horse is easier if picture of a cow is shown before horse.
+
+Palmer et al (1981): Many objects have a canonical view from which they are most easily identified. We recognize objects by matching the visual information with "key views"
+
+Implications:
+
+Images easily recognized: Use icons
+
+Priming effect: helping people search for particular patterns in data.
+
+RSVP can be utilized for searching images from database (quickly show 10 images per second. This is a lot faster than scanning thumbnail grid)
+
+
+
 \subsection{Structure based object recognition ++}
 
 Theory and implications in information visualization
