--- a/dippa.tex
+++ b/dippa.tex
@@ -166,8 +166,6 @@ What are gestalt laws and how can they be useful?
 
 List and briefly describe them.
 
-\subsection{Geons +}
-
 \subsection{Pre-attentive processing}
 
 \subsection{History and theory of data graphics according to Tufte ++++++}
@@ -179,6 +177,12 @@ History of data graphics and lessons learned (before the time of the computers)
 \subsection{Luminance and brightness +}
 
 \subsection{CIE XYZ, CIELab and CIELuv +++}
+
+\subsection{Geons +}
+
+Geon theory suggests that image recognition process has different processing stages (layers). Visual information is decomposed first into edges then axes, oriented blobs and vertices. At the next layer 3D primitives (cones, cylinders...) called \textbf{geons} are identified.
+
+Object recognition is achieved by finally analysing the interconnections of the geons.
 
 \subsection{Image based object recognition ++}
 
@@ -209,6 +213,8 @@ RSVP can be utilized for searching images from database (quickly show 10 images 
 \subsection{Structure based object recognition ++}
 
 Theory and implications in information visualization
+
+We recognize object not only based on the image but based on the structure, should as silhouettes of the object. 
 
 \subsection{Semiotics of graphics ++}
 
