--- a/dippa.tex
+++ b/dippa.tex
@@ -180,7 +180,7 @@ History of data graphics and lessons learned (before the time of the computers)
 
 \subsection{Geons +}
 
-Geon theory suggests that image recognition process has different processing stages (layers). Visual information is decomposed first into edges then axes, oriented blobs and vertices. At the next layer 3D primitives (cones, cylinders...) called \textbf{geons} are identified.
+(Hummel and Biederman) Geon theory suggests that image recognition process has different processing stages (layers). Visual information is decomposed first into edges then axes, oriented blobs and vertices. At the next layer 3D primitives (cones, cylinders...) called \textbf{geons} are identified.
 
 Object recognition is achieved by finally analysing the interconnections of the geons.
 
@@ -214,7 +214,9 @@ RSVP can be utilized for searching images from database (quickly show 10 images 
 
 Theory and implications in information visualization
 
-We recognize object not only based on the image but based on the structure, should as silhouettes of the object. 
+We recognize object not only based on the image but based on the structure, should as silhouettes of the object. Two identical objects in a different angle can be easily recognized as the same object despite the very different visual image.
+
+As a consequnce a line drawing of a hand may be easier to recognize than a picture of a hand
 
 \subsection{Semiotics of graphics ++}
 
