--- a/dippa.tex
+++ b/dippa.tex
@@ -108,7 +108,9 @@ Monocular static (Pictorial)
 
 Monocular dynamic (Moving picture)
 \begin{itemize}
-  \item Structure-from-motion (kinectic depth, motion parallax) - Motion parallax: Looking out of a train window. Objects closer to us move faster than objects closer to the horizon. Kinectic depth: Bent 3D wire projected onto a screen. Result is a 2D line, but if rotated the 3D shape of the wire come apparent.
+  \item Structure-from-motion (kinectic depth, motion parallax)
+  Motion parallax: Looking out of a train window. Objects closer to us move faster than objects closer to the horizon. 
+  Kinectic depth: Bent 3D wire projected onto a screen. Result is a 2D line, but if rotated the 3D shape of the wire come apparent.
 \end{itemize}
 
 Binocular
