--- a/dippa.tex
+++ b/dippa.tex
@@ -115,8 +115,8 @@ Monocular dynamic (Moving picture)
 
 Binocular
 \begin{itemize}
-  \item Eye convergence
-  \item Stereoscopic depth
+  \item Eye convergence: The vergence angle varies as the eyes fixate on near and far objects
+  \item Stereoscopic depth: ??
 \end{itemize}
 
 No unified cognitive theory for space perception
