--- a/dippa.tex
+++ b/dippa.tex
@@ -67,6 +67,8 @@ Discuss pre-attentive features in design and use of glyphs
 
 What is the principal component?
 
+
+
 Describe principal component analysis (PCA) in a suffient detail to understand the working ideas and principles
 
 Descrube the properties of the visualization produced by PCA, and demonstrate the difference in resulting visualizations using a small toy example
@@ -146,6 +148,8 @@ What to take into account when choosing a method to use
 
 \subsection{Precision (in dimensionality reduction)}
 
+Good precision: Points in the reduced space close to each other are close to each other in the original space
+
 \subsection{Chart Junk}
 
 \subsection{Gibson's Affordance Theory ++}
@@ -165,6 +169,8 @@ Influental theory?
 \subsection{Self-Organizing Maps (for dimensionality reduction)}
 
 \subsection{Saccadic Movements}
+
+Human eye sees when it fixates to a point. The movements between fixations are called saccadic movements.
 
 \subsection{Pre-processing steps}
 
@@ -210,6 +216,8 @@ ToF? Laplacian Eigenmap does not work in this case
 
 \subsection{Lie-factor}
 
+Effect in graph / effect in data
+
 \subsection{Data-ink}
 
 \subsection{Gestalt laws +++++}
@@ -227,6 +235,10 @@ History of data graphics and lessons learned (before the time of the computers)
 \section{Tentti 2009 - 05}
 
 \subsection{Luminance and brightness +}
+
+Luminance: physical emits light
+
+Brightness: perseived ligth
 
 \subsection{CIE XYZ, CIELab and CIELuv +++}
 
@@ -259,8 +271,6 @@ Images easily recognized: Use icons
 Priming effect: helping people search for particular patterns in data.
 
 RSVP can be utilized for searching images from database (quickly show 10 images per second. This is a lot faster than scanning thumbnail grid)
-
-
 
 \subsection{Structure based object recognition ++}
 
